--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div class="frame"></div>
 
 			<div class="frame">
-				<div class="frame__content">© WebDesign Master</div>
+				<div class="frame__content">© qqowwiowow</div>
 			</div>
 
 		</section>
